parfait/components/tabbar.css
/* ... */
#tabbrowser-tabs[expanded] .tab-close-button {
  border-radius: var(--pf-border-radius-sm) !important;
}
.tab-audio-button {
  background: no-repeat center var(--pf-icon-audio-12);
  fill: currentColor;
  -moz-context-properties: fill;
  --button-icon-fill: transparent;

  &[muted] {
    background-image: var(--pf-icon-audio-mute-12);
  }
}
.tab-icon-overlay[soundplaying] {
  list-style-image: var(--pf-icon-audio-12) !important;
}
.tab-icon-overlay[muted] {
  list-style-image: var(--pf-icon-audio-mute-12) !important;
}
.tabbrowser-tab:not([pinned]) {
  .tab-label-container {
    transition: padding-left var(--pf-ts-15);
  }
  &[pending] .tab-content {
    opacity: 0.5;
  }
  #tabbrowser-tabs[orient="vertical"] & .tab-background[selected] {
    animation: tab-select var(--pf-ts-25) var(--pf-fx-bounce);
  }
  #tabbrowser-tabs[orient="vertical"] & .tab-stack {
    transition: scale var(--pf-ts-15);

    &:hover:active:not(:has(.tab-audio-button:active, .tab-close-button:active)) {
      scale: 0.985;
    }
  }
  &:not(:hover) .tab-close-button {
    display: none !important;
  }
}
@keyframes tab-icon-bounce {
  0%, 100% { transform: translateY(0px) scale(1); }
  50% { transform: translateY(-4px) scale(1.125); }
}
@keyframes tab-select {
  0%   { scale: 1.025 1.125; }
  100% { scale: 1; }
}

/* tabs: pins */
#pinned-tabs-container[orient="vertical"] {
  --tab-pinned-margin-inline-expanded: calc(var(--tab-block-margin) * 2);
  --tab-pinned-min-width-expanded: 56px;

  @media not -moz-pref("sidebar.visibility", "expand-on-hover") {
    #tabbrowser-tabs[expanded] & {
      margin: calc(0px - var(--tab-block-margin));
      --tab-min-height: var(--pf-pinned-height);
      --tab-height-with-margin-padding: calc(var(--pf-pinned-height) + (var(--tab-block-margin) * 4));

      .tab-background {
        --tab-block-margin: var(--tab-pinned-margin-inline-expanded);
        --tab-inner-inline-margin: var(--tab-pinned-margin-inline-expanded);
      }
    }
  }
  .tabbrowser-tab:not(:hover) > .tab-stack > .tab-background:not([selected], [multiselected]) {
    background-color: var(--pf-toolbar-bgcolor) !important;
  }
}

/* tabs: containers */
.tab-context-line {
  opacity: 0.75;
  transition: var(--pf-ts-25) var(--pf-fx-bounce);
}
#tabbrowser-tabs[orient="vertical"] {
  .tabbrowser-tab:not([pinned]) {
    .tab-context-line {
      order: 1;
      min-height: calc(var(--tab-min-height) / 3);
      margin-block: auto !important;
    }
    &[selected] .tab-context-line {
      min-height: var(--icon-size);
    }
  }
  .tabbrowser-tab[pinned] {
    .tab-background {
      flex-direction: column-reverse !important;
    }
    .tab-context-line {
      min-width: calc(var(--pf-tab-height) / 3);
      height: 2px !important;
      margin: 0 auto !important;
    }
    &[selected] .tab-context-line {
      min-width: var(--icon-size);
    }
  }
}
#tabbrowser-tabs[orient="horizontal"] .tab-context-line {
  height: 1px !important;
}
/* ... */

